--- a/index.html
+++ b/index.html
@@ -12,39 +12,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="header-items">
-                <div class="menu-button">
-                    <button>
-                        <img src="https://cdn-icons-png.flaticon.com/512/1828/1828859.png" alt="menu button"></button>
-                </div>
-                <div class="gmail-logo">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Gmail2020.logo.png" alt="gmail logo">
-                </div>
-
-                <input class="search-bar" type="search" placeholder="Search mail">
-                <div class="right-header">
-                    <div class="support-button">
-                        <button>
-                            <img src="https://cdn-icons.flaticon.com/png/512/471/premium/471664.png?token=exp=1652973722~hmac=c527d10bd46fbdba36bb9e036847951c"
-                                alt="support button">
-                        </button>
-                    </div>
-                    <div class="settings-button">
-                        <button>
-                            <img src="https://cdn-icons.flaticon.com/png/512/2319/premium/2319156.png?token=exp=1652974149~hmac=af0cba13a0d39f4310d4bf24d9c16219"
-                                alt="">
-                        </button>
-                    </div>
-                    <div class="user-button">
-                        <button>
-                            <img src="   https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="">
-                        </button>
-                    </div>
-
-                </div>
-
-
-            </div>
+            <div class="left-header"></div>
+            <div class="search-mail"></div>
+            <div class="right-header"></div>
         </div>
         <div class="left-menu">left menu</div>
         <div class="main">main</div>
