add menu button and gmail logo

--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hoxton-html-gmail-layout</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
     <div class="container">
-        <div class="header">
-            <div class="left-header"></div>
+        <header class="header">
+            <div class="left-header">
+                <span class="material-symbols-outlined">
+               menu
+                </span>
+                <img src="https://cdn.vox-cdn.com/thumbor/8fWz6qpiMYMsZhY4vrc9Vhl5yL8=/0x110:1320x770/fit-in/1200x600/cdn.vox-cdn.com/uploads/chorus_asset/file/21939811/newgmaillogo.jpg" alt="gmail logo">
+            </div>
             <div class="search-mail"></div>
             <div class="right-header"></div>
-        </div>
+        </header>
         <div class="left-menu">left menu</div>
-        <div class="main">main</div>
+        <main class="main">main</main>
         <div class="settings">Quick settings</div>
         <div class="right-menu">right menu</div>
     </div>
