add search bar and right header

--- a/index.html
+++ b/index.html
@@ -14,13 +14,34 @@
     <div class="container">
         <header class="header">
             <div class="left-header">
+                <button>
                 <span class="material-symbols-outlined">
                menu
                 </span>
-                <img src="https://cdn.vox-cdn.com/thumbor/8fWz6qpiMYMsZhY4vrc9Vhl5yL8=/0x110:1320x770/fit-in/1200x600/cdn.vox-cdn.com/uploads/chorus_asset/file/21939811/newgmaillogo.jpg" alt="gmail logo">
+            </button>
+                <img class="gmail-logo" src="https://cdn.vox-cdn.com/thumbor/8fWz6qpiMYMsZhY4vrc9Vhl5yL8=/0x110:1320x770/fit-in/1200x600/cdn.vox-cdn.com/uploads/chorus_asset/file/21939811/newgmaillogo.jpg" alt="gmail logo">
             </div>
-            <div class="search-mail"></div>
-            <div class="right-header"></div>
+            <div class="header-search">           
+<input class="search-bar" type="search">
+            </div>
+            <div class="right-header">
+                <button>
+                <span class="material-symbols-outlined">
+                    search
+                    </span>
+                </button>
+                <button>
+                    <span class="material-symbols-outlined">
+                      settings
+                        </span>
+                   
+                    <span>
+                        Demir Boraj
+                   </span>
+                   <span>
+                 <img class="profile-picture" src="https://yt3.ggpht.com/yti/APfAmoGDUdmtSLwc3FYtlbZk2qhoWzvswasTWVkuk0OokQ=s88-c-k-c0x00ffffff-no-rj-mo" alt="">
+                      </span>
+            </div>
         </header>
         <div class="left-menu">left menu</div>
         <main class="main">main</main>
