right header editing

--- a/index.html
+++ b/index.html
@@ -21,26 +21,47 @@
             </button>
                 <img class="gmail-logo" src="https://cdn.vox-cdn.com/thumbor/8fWz6qpiMYMsZhY4vrc9Vhl5yL8=/0x110:1320x770/fit-in/1200x600/cdn.vox-cdn.com/uploads/chorus_asset/file/21939811/newgmaillogo.jpg" alt="gmail logo">
             </div>
-            <div class="header-search">           
-<input class="search-bar" type="search">
-            </div>
-            <div class="right-header">
-                <button>
+            <div class="header-search">  
+           <div class="search-icon search-side">
                 <span class="material-symbols-outlined">
                     search
+                  </span>         
+                </div>
+                <div class="search">
+<input class="search-bar" type="search"  placeholder="Search mail">
+</div>
+<div class="expand-icon search-side">
+<span class="material-symbols-outlined">
+    expand_more
+  </span>     
+</div>
+            </div>
+            <div class="right-header">
+                <div class="buttons">
+                <button>
+                <span class="material-symbols-outlined">
+                   help
                     </span>
                 </button>
                 <button>
                     <span class="material-symbols-outlined">
                       settings
                         </span>
-                   
+                   </button>
+                   <button>
+                    <span class="material-symbols-outlined">
+                      apps
+                    </span>
+                  </button>
+                </div>
+                <div class="user">
                     <span>
                         Demir Boraj
                    </span>
                    <span>
-                 <img class="profile-picture" src="https://yt3.ggpht.com/yti/APfAmoGDUdmtSLwc3FYtlbZk2qhoWzvswasTWVkuk0OokQ=s88-c-k-c0x00ffffff-no-rj-mo" alt="">
-                      </span>
+                 <img class="profile-picture" src="https://yt3.ggpht.com/yti/APfAmoGDUdmtSLwc3FYtlbZk2qhoWzvswasTWVkuk0OokQ=s88-c-k-c0x00ffffff-no-rj-mo" alt="profile picture">
+                 </span>
+                </div>
             </div>
         </header>
         <div class="left-menu">left menu</div>
